--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+
   },
   "author": "Lambda School",
   "license": "ISC"
